# aidna

./: .env  .gitignore  CLAUDE.md  README.md  aidna  claude.json  cli.sh  pyproject.toml
.claude/: claude.json
body/: claude.json  docker-compose.yml
body/app/: Dockerfile  claude.json  logging_db.py  main.py  memory.py  schemas.py  state.py
body/mind/: body_client.py  env_client.py  main.py  solver.py
cli/: CLAUDE.md  claude.json  config.py  core.py  main.py  rules.py  rules_external.py
cli/menus/: __init__.py  claude.json  exploration.py  individuals.py  rules.py  services.py
environment/: claude.json
environment/app/: claude.json  db.py  main.py  schemas.py  task_service.py
environment/app/services/: __init__.py  claude.json  individual_service.py  sacrifice_service.py  task_service.py
environment/services/: claude.json  docker-compose.yml  init.sql
mind/: claude.json  docker-compose.yml
mind/app/: Dockerfile  body_client.py  claude.json  env_client.py  main.py
